EAP7-431 Properly handle java 9 version string