@@ -24,12 +24,9 @@ package org.jboss.as.host.controller.model.jvm;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
 
 import org.junit.Assert;
 import org.junit.Test;
-import org.wildfly.security.manager.WildFlySecurityManager;
 
 /**
  *
@@ -37,23 +34,6 @@ import org.wildfly.security.manager.WildFlySecurityManager;
  * @version $Revision: 1.1 $
  */
 public class JvmOptionsBuilderUnitTestCase {
-    public static final int JVM_MAJOR_VERSION;
-
-    static {
-        int vmVersion;
-        try {
-            String vmVersionStr = WildFlySecurityManager.getPropertyPrivileged("java.specification.version", null);
-            Matcher matcher = Pattern.compile("^1\\.(\\d+)$").matcher(vmVersionStr); //match 1.<number>
-            if (matcher.find()) {
-                vmVersion = Integer.valueOf(matcher.group(1));
-            } else {
-                throw new RuntimeException("Unknown version of jvm "+vmVersionStr);
-            }
-        } catch (Exception e) {
-            vmVersion = 7;
-        }
-        JVM_MAJOR_VERSION = vmVersion;
-    }
 
     @Test
     public void testNoOptionsSun() {
@@ -149,13 +129,8 @@ public class JvmOptionsBuilderUnitTestCase {
         List<String> command = new ArrayList<String>();
         JvmOptionsBuilderFactory.getInstance().addOptions(element, command);
 
-        if (JVM_MAJOR_VERSION < 8) {
-            Assert.assertEquals(2, command.size());
-            Assert.assertTrue(command.contains("-XX:PermSize=32M"));
-            Assert.assertTrue(command.contains("-XX:MaxPermSize=64M"));
-        }else{
-            Assert.assertEquals(0, command.size());
-        }
+        Assert.assertEquals(0, command.size());
+
     }
 
     @Test
@@ -317,14 +292,10 @@ public class JvmOptionsBuilderUnitTestCase {
         List<String> command = new ArrayList<String>();
         JvmOptionsBuilderFactory.getInstance().addOptions(element, command);
 
-        Assert.assertEquals((type == JvmType.SUN  && JVM_MAJOR_VERSION < 8)? 10 : 8, command.size());
+        Assert.assertEquals( 8, command.size());
         Assert.assertTrue(command.contains("-agentlib:jdwp=transport=dt_socket,server=y,suspend=n"));
         Assert.assertTrue(command.contains("-Xms28M"));
         Assert.assertTrue(command.contains("-Xmx96M"));
-        if (type == JvmType.SUN && JVM_MAJOR_VERSION < 8) {
-            Assert.assertTrue(command.contains("-XX:PermSize=32M"));
-            Assert.assertTrue(command.contains("-XX:MaxPermSize=64M"));
-        }
         Assert.assertTrue(command.contains("-Xss1M"));
         Assert.assertTrue(command.contains("-agentlib:blah=x"));
         Assert.assertTrue(command.contains("-javaagent:blah.jar=x"));
